corpus/cpp/concepts_constraints/case-01/snapshots/gcc13_14/single_sink_structured/render.default.txt
error: [type_mismatch] no matching function for call to 'consume(int)' @ src/main.cpp:8:12
want: value.size()
got : int
via : template<class T>  requires  HasSize<T> int consume(T) @ src/main.cpp:5:5  +4 notes
| src/main.cpp:8:12
|     return consume(1);
|            ^
template: src/main.cpp:5:5 candidate: 'template<class T>  requires  HasSize<T> int consume(T)'
template: src/main.cpp:5:5 template argument deduction/substitution failed:
note: omitted 2 additional note(s)
details: --formed-explain | raw: --formed-raw